// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SelectSearch component Focus displays options 1`] = `
"<div class=\\"select-search\\">
  <div class=\\"select-search__value\\"><input tabindex=\\"0\\" readonly=\\"\\" autocomplete=\\"on\\" class=\\"select-search__input\\" value=\\"Foo\\"></div>
</div>"
`;

exports[`Test SelectSearch component Focus displays options 2`] = `
"<div class=\\"select-search has-focus\\">
  <div class=\\"select-search__value\\"><input tabindex=\\"0\\" readonly=\\"\\" autocomplete=\\"on\\" class=\\"select-search__input\\" value=\\"Foo\\"></div>
  <div class=\\"select-search__select\\">
    <ul class=\\"select-search__options\\">
      <li class=\\"select-search__row\\" role=\\"menuitem\\" data-index=\\"0\\" data-value=\\"foo\\"><button class=\\"select-search__option is-selected\\" tabindex=\\"-1\\" value=\\"foo\\">Foo</button></li>
      <li class=\\"select-search__row\\" role=\\"menuitem\\" data-index=\\"1\\" data-value=\\"bar\\"><button class=\\"select-search__option\\" tabindex=\\"-1\\" value=\\"bar\\">Bar</button></li>
    </ul>
  </div>
</div>"
`;

exports[`Test SelectSearch component Renders with default props 1`] = `
"<div class=\\"select-search\\">
  <div class=\\"select-search__value\\"><input tabindex=\\"0\\" readonly=\\"\\" autocomplete=\\"on\\" class=\\"select-search__input\\" value=\\"Foo\\"></div>
</div>"
`;

exports[`Test SelectSearch component Renders with multiple 1`] = `
"<div class=\\"select-search\\">
  <div class=\\"select-search__select\\">
    <ul class=\\"select-search__options\\">
      <li class=\\"select-search__row\\" role=\\"menuitem\\" data-index=\\"0\\" data-value=\\"foo\\"><button class=\\"select-search__option\\" tabindex=\\"-1\\" value=\\"foo\\">Foo</button></li>
      <li class=\\"select-search__row\\" role=\\"menuitem\\" data-index=\\"1\\" data-value=\\"bar\\"><button class=\\"select-search__option\\" tabindex=\\"-1\\" value=\\"bar\\">Bar</button></li>
    </ul>
  </div>
</div>"
`;
